--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v1
@@ -15,4 +15,5 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: |
+        brew install jpeg-xl
         mvn -B package --file pom.xml
