--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-image-jpegxl</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
 
   <properties>
     <jnaerator.version>0.12</jnaerator.version>
