--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-image-jpegxl</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3</version>
 
   <properties>
     <jnaerator.version>0.12</jnaerator.version>
@@ -206,6 +206,7 @@
           <argLine>
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
             -Djava.library.path=${project.build.testOutputDirectory}
+            -Djna.library.path=/usr/local/lib
           </argLine>
           <trimStackTrace>false</trimStackTrace>
         </configuration>
