--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
       </activation>
       <properties>
         <native.prefix>/opt/homebrew</native.prefix>
+        <native.arch>aarch64</native.arch>
       </properties>
     </profile>
     <profile>
@@ -41,6 +42,7 @@
       </activation>
       <properties>
         <native.prefix>/usr/local</native.prefix>
+        <native.arch>x86_64</native.arch>
       </properties>
     </profile>
 
@@ -69,7 +71,7 @@
                 <compilerStartOption>-g -Wall -O2 -fomit-frame-pointer -fPIC -std=c++11</compilerStartOption>
                 <!-- unless locating jdk includes, cause error why??? -->
                 <!-- spaces must not be included in ${java.home} (i.e. JetBrain jdk) -->
-                <compilerStartOption> -arch arm64
+                <compilerStartOption> -arch ${native.arch}
                   -I${java.home}/include
                   -I${java.home}/include/darwin
                   -I${native.prefix}/include
@@ -85,7 +87,7 @@
                 </source>
               </sources>
               <linkerStartOptions>
-                <linkerStartOption>-dynamiclib -arch arm64 -v
+                <linkerStartOption>-dynamiclib -arch ${native.arch} -v
                   -L${native.prefix}/lib -lc++ -ljxl -ljxl_threads</linkerStartOption>
               </linkerStartOptions>
               <linkerFinalName/>
