--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: macos-14
+    runs-on: macos-latest
 
     steps:
       - name: Checkout repository
@@ -25,6 +25,4 @@ jobs:
       - name: Build with Maven
         run: |
           brew install jpeg-xl
-          brew upgrade jpeg-xl
-          brew info jpeg-xl
           mvn -B package --file pom.xml
