--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,9 +16,9 @@ jobs:
       packages: write
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -29,9 +29,11 @@ jobs:
     - name: Build with Maven
       run: |
         brew install jpeg-xl
-        mvn -B package --file pom.xml
+        mvn -B package --file pom.xml -Dmaven.test.skip=true
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml -Dmaven.test.skip=true
+    - name: Upload Release Asset
+      uses: softprops/action-gh-release@v2
       env:
         GITHUB_TOKEN: ${{ github.token }}
+      with:
+        files: target/classes/natives/osx_arm64/libjxlwrapper.dylib
