--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -60,8 +60,7 @@ jobs:
 
     - name: Build with Maven
       run: |
-        arch -arm64 /opt/homebrew/bin/brew install jpeg-xl
-        mvn -B install --file pom.xml -Dmaven.test.skip=true
+        mvn -B install --file pom.xml -DskipTests=true
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
