--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -60,6 +60,7 @@ jobs:
 
     - name: Build with Maven
       run: |
+        brew install jpeg-xl
         mvn -B install --file pom.xml -DskipTests=true
 
     - name: Perform CodeQL Analysis
