--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <artifactId>vavi-image-jpegxl</artifactId>
   <version>0.0.6</version>
 
+  <url>https://github.com/umjammer/vavi-image-jpegxl</url>
+
   <properties>
     <jnaerator.version>0.12</jnaerator.version>
     <native.prefix>/usr/local</native.prefix>
