--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -4,3 +4,6 @@ java.util.logging.ConsoleHandler.level=ALL
 java.util.logging.ConsoleHandler.formatter=vavi.util.logging.VaviFormatter
 
 #vavi.util.level=FINE
+vavi.awt.image.jna.jpegxl.level=FINE
+vavi.image.jpegxl.level=FINE
+vavi.imageio.jpegxl.level=FINE
